# django_layui29

./: .bumpversion.cfg  .gitignore  .pdm-python  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  README.md  README_zh.md  index.html  pyproject.toml  search.html  sitemap.xml
.github/workflows/: gh-pages.yml  publish.yml  test.yml
advanced/: index.html
components/: index.html
docs/: mkdocs.yml
docs/docs/: advanced.md  components.md  index.md  layouts.md  mkdocs.md  quickstart.md
layouts/: index.html
mkdocs/: index.html
quickstart/: index.html
search/: search_index.json
src/conf/: settings.py  urls.py
src/django_layui/: apps.py
src/django_layui29/: apps.py  form.py  utils.py
src/django_layui29/static/layui29/css/: center.css  global.css
src/django_layui29/static/layui29/js/: base.js
src/django_layui29/templates/layui29/: base.html
src/django_layui29/templates/layui29/component/: tables.html
src/django_layui29/templates/layui29/component/base/: header.html  left_nav.html
src/django_layui29/templates/layui29/layout/: admin.html  center.html  normal.html
src/testapp/: models.py  tables.py  utils.py  views.py
src/testapp/migrations/: 0001_initial.py
src/testapp/templates/testapp/: admin_example.html  center_example.html  normal_example.html  tables.html
tests/: test_layui_loading.py
