[project]
name = "django_layui29"
version = "0.4.1"
description = ""
authors = [
    {name = "svtter", email = "svtter@163.com"},
]
dependencies = [
    "django>=3.2,<6.0",
    "django-tables2>=2.7.0",
]

requires-python = ">=3.9,<4.0"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest<8.0.0,>=7.2.0",
    "pytest-xdist<4.0.0,>=3.0.2",
    "pytest-django<5.0.0,>=4.5.2",
    "pre-commit<3.0.0,>=2.20.0",
    "mkdocs<2.0.0,>=1.4.3",
    "djlint<2.0.0,>=1.34.1",
    "bumpversion<1.0.0,>=0.6.0",
    "twine<6.0.0,>=5.0.0",
]

[tool.pdm.build]
includes = []


[[tool.pdm.source]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
verify_ssl = false
name = "pypi"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

# -- FILE: pytest.ini (or tox.ini)
[[tool.pytest.ini_options]]
DJANGO_SETTINGS_MODULE = "conf.settings"
# -- recommended but optional:
python_files = "tests.py test_*.py *_tests.py"
addopts = "-n3"

[project.urls]
homepage = "https://github.com/Svtter/django-layui"
repository = "https://github.com/Svtter/django-layui.git"
changelog = "https://github.com/Svtter/django-layui/blob/master/CHANGELOG.md"
bugs = "https://github.com/Svtter/django-layui/issues"
# sponsor = "https://github.com/sponsors/svtter"