[tool.poetry]
name = "django_layui29"
version = "0.4.1"
description = "django template based on layui2.9"
authors = ["svtter <svtter@163.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
django = "<6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-xdist = "^3.0.2"
pytest-django = "^4.5.2"
pre-commit = "^2.20.0"
mkdocs = "^1.4.3"
djlint = "^1.34.1"
bumpversion = "^0.6.0"
twine = "^5.0.0"


[tool.poetry.group.tables.dependencies]
django-tables2 = "^2.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# -- FILE: pytest.ini (or tox.ini)
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "conf.settings"
# -- recommended but optional:
python_files = "tests.py test_*.py *_tests.py"
addopts = "-n3"

[tool.poetry.urls]
homepage = "https://github.com/Svtter/django-layui"
repository = "https://github.com/Svtter/django-layui.git"
changelog = "https://github.com/Svtter/django-layui/blob/master/CHANGELOG.md"
bugs = "https://github.com/Svtter/django-layui/issues"
# sponsor = "https://github.com/sponsors/svtter"
[project]
authors = [
    {name = "svtter", email = "svtter@163.com"},
]
requires-python = "<4.0,>=3.9"
dependencies = [
    "django<6.0",
]
name = "django_layui29"
version = "0.4.1"
description = ""

[project.urls]
homepage = "https://github.com/Svtter/django-layui"
repository = "https://github.com/Svtter/django-layui.git"
changelog = "https://github.com/Svtter/django-layui/blob/master/CHANGELOG.md"
bugs = "https://github.com/Svtter/django-layui/issues"

[dependency-groups]
dev = [
    "djlint>=1.36.4",
]
